# member-book-service

./: .gitignore  COMPLETE_MEMBER_API.md  Dockerfile  MARKET_SEGMENTATIONS_API.md  Makefile  README.md  UPSERT_API.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  env.example  migrate.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 46a0acb9e67e_initial_migration.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: members.py
app/controllers/: member_controller.py
app/core/: config.py
app/dto/: market_segmentation_dto.py  member_dto.py  upsert_data_dto.py
app/models/: __init__.py  additional_info.py  address.py  company.py  contact_channel.py  market_segmentation.py  member.py  member_company.py  performance.py  performance_event.py  profile.py
app/seeds/: profiles_seed.py
app/services/: member_service.py
